manifests/deployment/mutating-webhook-registration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: secrets-demo.kubecon-eu.info
webhooks:
  - name: secrets-demo.kubecon-eu.info
    failurePolicy: Fail
    timeoutSeconds: 5
    sideEffects: None
    admissionReviewVersions: ["v1"]
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE", "UPDATE"]
        resources:   ["secrets"]
        scope:       "Namespaced"
    clientConfig:
      url: "https://localhost:8083/secrets"
      caBundle: MIIC3jCCAcagAwIBAgIBATANBgkqhkiG9w0BAQsFADAgMR4wHAYDVQQDDBUwLjAuMC4wLWNhQDE1ODE0NjYyNTYwHhcNMjAwMjExMjMxMDU2WhcNMjEwMjEwMjMxMDU2WjAgMR4wHAYDVQQDDBUwLjAuMC4wLWNhQDE1ODE0NjYyNTYwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDNLfHE1sig5h82MBvKlK+yhBEfdKdBMD9BrBcQzv16S8+jfuGyN0ThRlTj56P3b1QS5kUuMjtFIVLhF/64Wy0/n1JVTPsgHn69ObXoFOgdHUU55aaFf/fyC5GtD+Nzmv8KGE3LrvU2HW7cJyWZY7YQIe5EixAGUIAZIzMR/Uu3n7UtiwdcGDRaELS6U8cu1szxXUo8IbnoKjO+uk+oF/e0d/j2PK06wpu1aamGnLCTl1LuSO6CQFyqNqRWIhVDm2JHTHoSY59j [...]
